mycms/media/readingStyle.css
#whiteBorder{
    background-color: #EDEEE1;
    height: 900px;  /*hardcoded */
    width: 1292px;
    position: absolute;
    left: 0px;
    top: 200px;
	
}

#amplifyHeading{
/*	font-family: 'Patua One', cursive;*/
/*	font-family: 'Headland One', serif;*/
	font-family: 'Bitter', serif;
	font-size: 72pt;
	color: #009DAE;
	position: absolute;
	padding-top: 20px;
        width: 365px;
        text-align: center;
        z-index: 999;


}

#innovationsWholeDiv{      /*includes nav div for easier hovering.*/
    position: absolute;
    width: 718px;
    height: 167px;
    z-index: -1;
    top: 80px;
 }

#innovationsImageOnly{
   border-bottom: 5px solid #00CCCC;
}


#allIssueLinks{
    background-color: #F5F9E7;
    position: absolute;
    z-index: 1000;
    opacity: 0.95;
    color: #605C5B;

}

.issueLinks{
	font-size: 13pt;
        font-family: bitter;
        line-height: 1.4;
        position: relative;
        opacity: 1.0;
        padding-right: 35px;
}

#allCategories{
    padding-left: 35px;
}

.innovCategories{
        font-family: bitter;
        font-size: 10pt;
        display: inline;
        margin-left: 0;

}

.innovArticleTitles{
    font-family: helvetica;
    font-size: 10pt;
    padding-left: 60px;
    font-weight: normal;
}

#currentArticle{
    background-color: #00CCCC;
    font-weight: bold;
}

#abstractTitle{
/*	font-family: 'Patua One', cursive;*/
/*	font-family: 'Headland One', serif;*/
	font-family: 'Bitter', serif;
/*	font-size: 48pt;*/
    font-size: 32pt;
	text-align: center;
	color: #009DAE;
	width: 350px;
	position: absolute;
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 20px;
        padding-bottom: 0px;	
        text-align: left;
}

#abstractRest{
    width: 320px; /*350*/
    position: absolute;
	font-size: 10pt;
	font-family: helvetica;
	position: absolute;
	padding-left: 15px;
	padding-right: 15px;
        padding-bottom: 20px;
        line-height: 1.2em;
}



#abstractRest{
	padding-left: 15px;
/*	border-left: 1px solid grey;*/
}

.clear{
    height:0px;
    overflow:hidden;
	display: block;
}

#wholeLeftCol{
/*background-color: #D5D6C2;*/
/*position: fixed;*/
/*overflow: scroll;*/
}

#outline{
    width: 350px;
    position: absolute;
    padding-bottom: 10px;
/*	background-color: #EDEEE1;*/

    
	
}


.outlineBox{
    font-size: 10pt;
    font-family: helvetica;
    padding-top: 10px;
    padding-left: 15px;
    padding-right: 10px;
    line-height: 1.2em;

}

.outlineTitle{
	padding-bottom: 5px;
	font-weight: bold;
	border-bottom: 1px solid grey;
        margin-bottom: 5px;
        font-family: 'Bitter';
        color: #3d3d3d;
}

.outlineRest{
	padding-bottom: 20px;
}


#article{
    font-family: helvetica;
    font-size: 10pt;
    line-height: 1.2em;
    background-color: white;
	width: 500px;
	position: absolute;

	padding-bottom: 20px;
        padding-top: 20px;
	padding-left: 35px;
	padding-right: 35px;
	
/*	overflow: hidden;  */
        position: absolute;
}

#articleTitle{
	background-color: #EDEEE1;
	position: absolute;
        padding-left: 35px; /*match article padding-left padding*/
	padding-right: 75px;
	padding-bottom: 15px;
	text-align: left;
        padding-top: 15px;
	font-size: 30pt;
	font-family: helvetica;

}

#articleMainTitle{
    display: inline;
    float: left; 
    font-weight: 800;
    position: relative;
    margin-right: 10px;
}

#articleSubtitle{
    position: relative;
    float: left;
    font-weight: normal;
    display: inline;
    text-align: left;
    font-size: 22pt;
        
}

.author-heading{
	font-weight: bold;
	font-size: 14pt;
}

.author-ref{
    font-weight: bold;
}

#reference{
    background-color: white;
    padding-bottom:60px;
    position:absolute;
    padding-left: 50px;
    padding-right: 10px;
/*    overflow: scroll;*/
}

#wholeRightCol{
    display: inline;
    z-index: -1;
    overflow: scroll;
}

.artPar{
}


.footNumber{
    color:#3d3d3d;
}

h2{
    line-height:1.1em;
}


.references{
    font-size:8pt;
    line-height: 1.2em;
}

.references a {
    text-decoration: none;
}

.references a:hover {
    text-decoration: underline;
}

#articleAndRef {
    z-index: -1;
}

